created register and login pages
